# info

./: CMakeLists.txt  README.md
program1/include/: prog1.h
program1/src/: CMakeLists.txt  main.cpp  prog1.cpp
program2/include/: prog2.h
program2/src/: CMakeLists.txt  main.cpp  prog2.cpp
